syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "BillingServiceOuterClass";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AccountBillingService {
  rpc createBillingAccount (AccountBillingRequest) returns (AccountBillingResponse);
  rpc deleteBillingAccount (DeleteBillingAccountRequest) returns (google.protobuf.Empty);
}

message AccountBillingRequest {
  string userId = 1;
  string currency = 2;
}

message AccountBillingResponse {
  string billingAccountId = 1;
  string billingAccountStatus = 2;
  google.protobuf.Timestamp createdAt = 3;

}

message DeleteBillingAccountRequest {
  string billingAccountId = 1;
}


