syntax = "proto3";

option java_multiple_files = true;
option java_package = "userServiceGrpc";
option java_outer_classname = "UserServiceProto";

package userService;

service UserService {
  rpc GetUserWithAddresses(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  string dateOfBirth = 6;
  string gender = 7;

  string billingAccountId = 8;
  string billingAccountStatus = 9;

  bool marketingEmails = 10;
  bool orderNotifications = 11;

  repeated UserAddressMessage addresses = 12;
}

message UserAddressMessage {
  string addressId = 1;
  string type = 2;  // BILLING, SHIPPING, BOTH
  bool isDefault = 3;
  string company = 4;
  string addressLine1 = 5;
  string addressLine2 = 6;
  string city = 7;
  string state = 8;
  string postalCode = 9;
  string country = 10;
}